--- a/baiyan-ddd-start/src/main/resources/messages.properties
+++ b/baiyan-ddd-start/src/main/resources/messages.properties
@@ -10,6 +10,7 @@ user.role.id.is.empty=\u7528\u6237\u89D2\u8272\u4E0D\u53EF\u4E3A\u7A7A
 user.id.is.null=\u7528\u6237id\u4E0D\u53EF\u4E3A\u7A7A
 user.is.not.exist=\u7528\u6237\u4E0D\u5B58\u5728
 user.user.name.is.exist=\u7528\u6237\u540D\u5DF2\u5B58\u5728
+user.role.is.not.exist=\u5B58\u5728\u5173\u8054\u7684\u7528\u6237\u89D2\u8272\u4E0D\u5B58\u5728
 
 #\u5355\u4F4D
 unit.is.not.exist=\u5355\u4F4D\u4E0D\u5B58\u5728
